--- a/workflows/ci.yaml
+++ b/workflows/ci.yaml
@@ -31,7 +31,7 @@ jobs:
         with:
           registry: ${{ inputs.registry }}
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.token }}
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
